[TASK] Modifies path to jquery

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>squareApplication</title>
     <link rel="stylesheet" href="css/style.css" />
-    <script src="jquery-3.2.0.js"></script>
+    <script src="js/jquery-3.2.0.js"></script>
 </head>
 
 <body>
